--- a/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
+++ b/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="SubmarineG3D.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Camera.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
