Am creat cpp pentru clasa Camera

--- a/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj.filters
+++ b/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="SubmarineG3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
