--- a/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
+++ b/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="SubmarineG3D.cpp" />
   </ItemGroup>
   <ItemGroup>
