--- a/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
+++ b/SubmarineG3D/SubmarineG3D/SubmarineG3D.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>D:\G3D_Lab\glfw-3.3.4.bin.WIN32\include\GLFW;D:\G3D_Lab\glm-stable\glm;D:\G3D_Lab\glew-2.1.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\G3D_Lab\glfw-3.3.4.bin.WIN32\lib-vc2019;D:\G3D_Lab\glew-2.1.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
